--- a/Sejong/index.html
+++ b/Sejong/index.html
@@ -577,7 +577,7 @@
                         </ul>
                     </nav>
                     <div class="sitemap">
-                        <a name="사이트맵"  href="#n">
+                        <a href="#n">
                             <span>사이트맵</span>
                         </a>
                     </div>
@@ -637,15 +637,15 @@
                     <!-- 폼그룹 -->
                     <div class="serach">
                         <div class="serach_tit">
-                            <label for="mainsearch">메인검색창</label>
+                            <label for="label">메인검색창</label>
                         </div>
                         <div class="serach_content">
                             <div class="sejong">
                                 <a href="#n"><img src="images/search/search_sejong.jpg" alt="세종캐릭터"></a>
                             </div>
                             <div class="search_inner">
-                                <input type="text" class="search_bar" role="textbox" placeholder="세종의 모든것을 검색해보세요">
-                                <button type="button" title="새창으로 이동" class="search_button" role="button"><span>검색</span></button>
+                                <input class="search_bar" placeholder="세종의 모든것을 검색해보세요">
+                                <button title="새창으로 이동" class="search_button"><span>검색</span></button>
                             </div>
                         </div>
                     </div>
@@ -667,9 +667,9 @@
                                 <div class="swiper_nav">
                                     <div class="swiper-pagination"></div>
                                     <div class="buntton_inner">
-                                        <button class="prev" role="button"><span>이전</span></button>
-                                        <button class="stop" role="button"><span>정지</span></button>
-                                        <button class="next" role="button"><span>다음</span></button>
+                                        <button class="prev"><span>이전</span></button>
+                                        <button class="stop"><span>정지</span></button>
+                                        <button class="next"><span>다음</span></button>
                                     </div>
                                 </div>
                             </div>
@@ -814,8 +814,8 @@
                             </ul>
                         </div>
                         <div class="swiper_nav">
-                            <button class="prev" role="button"><span>이전</span></button>
-                            <button class="next" role="button"><span>다음</span></button>
+                            <button class="prev"><span>이전</span></button>
+                            <button class="next"><span>다음</span></button>
                         </div>
                     </div>
                 </div>
@@ -828,19 +828,19 @@
                             <!-- tab list -->
                             <div class="tab_head">
                                 <ul class="tab_list">
-                                    <li role="tab" aria-selected="true" aria-controls="panel_01" class="active" title="선택됨">
+                                    <li role="tablist" aria-selected="true" aria-controls="panel_01" class="active" title="선택됨">
                                         <a href="#n">공지사항</a>
                                     </li>
-                                    <li role="tab" aria-selected="false" aria-controls="panel_02">
+                                    <li role="tablist" aria-selected="false" aria-controls="panel_01">
                                         <a href="#n">고시공고</a>
                                     </li>
-                                    <li role="tab" aria-selected="false" aria-controls="panel_03">
+                                    <li role="tablist" aria-selected="false" aria-controls="panel_01">
                                         <a href="#n">시험정보</a>
                                     </li>
-                                    <li role="tab" aria-selected="false" aria-controls="panel_04">
+                                    <li role="tablist" aria-selected="false" aria-controls="panel_01">
                                         <a href="#n">보도자료</a>
                                     </li>
-                                    <div class="more"><a href="#n"><span>전체보기</span></a></div>
+                                    <li class="more"><a href="#n"><span>전체보기</span></a></li>
                                 </ul>
                             </div>
                             <!-- //tab list -->                          
@@ -1032,7 +1032,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="sns">
+                        <di v class="sns">
                             <div class="left_inner">
                                 <div class="title">
                                     <span>세종과 <em>소통해요</em></span>
@@ -1049,98 +1049,97 @@
                             <div class="character">캐릭터</div>
                         </div>
                     </div>
+            </div>
+        </div>
+        <footer>
+            <div class="footer_head">
+                <div class="wrapper">
+                    <ul class="footer_link">
+                        <li>
+                            <a href="#n"><span>실속/직속기관/사업소</span><i>화살표아이콘</i></a>
+                            <ul class="depth2">
+                                <li><a href="#n">공보관</a></li>
+                                <li><a href="#n">자치행정국</a></li>
+                                <li><a href="#n">도시주택국</a></li>
+                                <li><a href="#n">공보관</a></li>
+                                <li><a href="#n">세종소방서</a></li>
+                                <li><a href="#n">남부통합보건지소</a></li>
+                                <li><a href="#n">공보관</a></li>
+                                <li><a href="#n">도로관리사업소</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#n">읍면동<i>화살표아이콘</i></a>
+                            <ul class="depth2">
+                                <li><a href="#n">공보관</a></li>
+                                <li><a href="#n">자치행정국</a></li>
+                                <li><a href="#n">도시주택국</a></li>
+                                <li><a href="#n">공보관</a></li>
+                                <li><a href="#n">세종소방서</a></li>
+                                <li><a href="#n">남부통합보건지소</a></li>
+                                <li><a href="#n">공보관</a></li>
+                                <li><a href="#n">도로관리사업소</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#n">관련사이트<i>화살표아이콘</i></a>
+                            <ul class="depth2">
+                                <li><a href="#n">공보관</a></li>
+                                <li><a href="#n">자치행정국</a></li>
+                                <li><a href="#n">도시주택국</a></li>
+                                <li><a href="#n">공보관</a></li>
+                                <li><a href="#n">세종소방서</a></li>
+                                <li><a href="#n">남부통합보건지소</a></li>
+                                <li><a href="#n">공보관</a></li>
+                                <li><a href="#n">도로관리사업소</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#n">공기업/출자·출연기관<i>화살표아이콘</i></a>
+                            <ul class="depth2">
+                                <li><a href="#n">공보관</a></li>
+                                <li><a href="#n">자치행정국</a></li>
+                                <li><a href="#n">도시주택국</a></li>
+                                <li><a href="#n">공보관</a></li>
+                                <li><a href="#n">세종소방서</a></li>
+                                <li><a href="#n">남부통합보건지소</a></li>
+                                <li><a href="#n">공보관</a></li>
+                                <li><a href="#n">도로관리사업소</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#n">지역/전국 기관<i>화살표아이콘</i></a>
+                            <ul class="depth2">
+                                <li><a href="#n">공보관</a></li>
+                                <li><a href="#n">자치행정국</a></li>
+                                <li><a href="#n">도시주택국</a></li>
+                                <li><a href="#n">공보관</a></li>
+                                <li><a href="#n">세종소방서</a></li>
+                                <li><a href="#n">남부통합보건지소</a></li>
+                                <li><a href="#n">공보관</a></li>
+                                <li><a href="#n">도로관리사업소</a></li>
+                            </ul>
+                        </li>
+                    </ul>
                 </div>
             </div>
-            <footer>
-                <div class="footer_head">
-                    <div class="wrapper">
-                        <ul class="footer_link">
-                            <li>
-                                <a href="#n"><span>실속/직속기관/사업소</span><i>화살표아이콘</i></a>
-                                <ul class="depth2">
-                                    <li><a href="#n">공보관</a></li>
-                                    <li><a href="#n">자치행정국</a></li>
-                                    <li><a href="#n">도시주택국</a></li>
-                                    <li><a href="#n">공보관</a></li>
-                                    <li><a href="#n">세종소방서</a></li>
-                                    <li><a href="#n">남부통합보건지소</a></li>
-                                    <li><a href="#n">공보관</a></li>
-                                    <li><a href="#n">도로관리사업소</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="#n">읍면동<i>화살표아이콘</i></a>
-                                <ul class="depth2">
-                                    <li><a href="#n">공보관</a></li>
-                                    <li><a href="#n">자치행정국</a></li>
-                                    <li><a href="#n">도시주택국</a></li>
-                                    <li><a href="#n">공보관</a></li>
-                                    <li><a href="#n">세종소방서</a></li>
-                                    <li><a href="#n">남부통합보건지소</a></li>
-                                    <li><a href="#n">공보관</a></li>
-                                    <li><a href="#n">도로관리사업소</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="#n">관련사이트<i>화살표아이콘</i></a>
-                                <ul class="depth2">
-                                    <li><a href="#n">공보관</a></li>
-                                    <li><a href="#n">자치행정국</a></li>
-                                    <li><a href="#n">도시주택국</a></li>
-                                    <li><a href="#n">공보관</a></li>
-                                    <li><a href="#n">세종소방서</a></li>
-                                    <li><a href="#n">남부통합보건지소</a></li>
-                                    <li><a href="#n">공보관</a></li>
-                                    <li><a href="#n">도로관리사업소</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="#n">공기업/출자·출연기관<i>화살표아이콘</i></a>
-                                <ul class="depth2">
-                                    <li><a href="#n">공보관</a></li>
-                                    <li><a href="#n">자치행정국</a></li>
-                                    <li><a href="#n">도시주택국</a></li>
-                                    <li><a href="#n">공보관</a></li>
-                                    <li><a href="#n">세종소방서</a></li>
-                                    <li><a href="#n">남부통합보건지소</a></li>
-                                    <li><a href="#n">공보관</a></li>
-                                    <li><a href="#n">도로관리사업소</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="#n">지역/전국 기관<i>화살표아이콘</i></a>
-                                <ul class="depth2">
-                                    <li><a href="#n">공보관</a></li>
-                                    <li><a href="#n">자치행정국</a></li>
-                                    <li><a href="#n">도시주택국</a></li>
-                                    <li><a href="#n">공보관</a></li>
-                                    <li><a href="#n">세종소방서</a></li>
-                                    <li><a href="#n">남부통합보건지소</a></li>
-                                    <li><a href="#n">공보관</a></li>
-                                    <li><a href="#n">도로관리사업소</a></li>
-                                </ul>
-                            </li>
+            <div class="footer_body">
+                <div class="wrapper">
+                    <div class="logo">세종특별시 로고</div>
+                    <div class="right_inner">
+                        <ul class="footer_nav">
+                            <li><a href="#n">개인정보처리방침</a></li>
+                            <li><a href="#n">영상정보처리기기운영·관리방침</a></li>
+                            <li><a href="#n">저작권정책</a></li>
+                            <li><a href="#n">이메일주소무단수집거부</a></li>
+                            <li><a href="#n">오시는길</a></li>
+                            <li><a href="#n"></a></li>
+                            <li><a href="#n">홈페이지개선의견</a></li>
                         </ul>
-                    </div>
-                </div>
-                <div class="footer_body">
-                    <div class="wrapper">
-                        <div class="logo">세종특별시 로고</div>
-                        <div class="right_inner">
-                            <ul class="footer_nav">
-                                <li><a href="#n">개인정보처리방침</a></li>
-                                <li><a href="#n">영상정보처리기기운영·관리방침</a></li>
-                                <li><a href="#n">저작권정책</a></li>
-                                <li><a href="#n">이메일주소무단수집거부</a></li>
-                                <li><a href="#n">오시는길</a></li>
-                                <li><a href="#n"></a></li>
-                                <li><a href="#n">홈페이지개선의견</a></li>
-                            </ul>
-                            <div class="footer_info">
-                                <address>세종특별자치시 한누리대로 2130 (보람동) (우)30151 / 대표전화 (044) 120</address>
-                                <div class="copyright">Copyright © 세종특별자치시. All Rights Reserved.</div>
-                            </div>
+                        <div class="footer_info">
+                            <address>세종특별자치시 한누리대로 2130 (보람동) (우)30151 / 대표전화 (044) 120</address>
+                            <div class="copyright">Copyright © 세종특별자치시. All Rights Reserved.</div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
+        </footer>
     </div>
 </body>
 </html>
