--- a/Sejong/index.html
+++ b/Sejong/index.html
@@ -828,16 +828,16 @@
                             <!-- tab list -->
                             <div class="tab_head">
                                 <ul class="tab_list">
-                                    <li role="tablist" aria-selected="true" aria-controls="panel_01" class="active" title="선택됨">
+                                    <li role="tab" aria-selected="true" aria-controls="panel_01" class="active" title="선택됨">
                                         <a href="#n">공지사항</a>
                                     </li>
-                                    <li role="tablist" aria-selected="false" aria-controls="panel_02">
+                                    <li role="tab" aria-selected="false" aria-controls="panel_02">
                                         <a href="#n">고시공고</a>
                                     </li>
-                                    <li role="tablist" aria-selected="false" aria-controls="panel_03">
+                                    <li role="tab" aria-selected="false" aria-controls="panel_03">
                                         <a href="#n">시험정보</a>
                                     </li>
-                                    <li role="tablist" aria-selected="false" aria-controls="panel_04">
+                                    <li role="tab" aria-selected="false" aria-controls="panel_04">
                                         <a href="#n">보도자료</a>
                                     </li>
                                     <li class="more"><a href="#n"><span>전체보기</span></a></li>
@@ -1032,7 +1032,7 @@
                                 </a>
                             </div>
                         </div>
-                        <di v class="sns">
+                        <div class="sns">
                             <div class="left_inner">
                                 <div class="title">
                                     <span>세종과 <em>소통해요</em></span>
@@ -1049,8 +1049,8 @@
                             <div class="character">캐릭터</div>
                         </div>
                     </div>
+                </div>
             </div>
-        </div>
         <footer>
             <div class="footer_head">
                 <div class="wrapper">
