--- a/Sejong/index.html
+++ b/Sejong/index.html
@@ -637,14 +637,14 @@
                     <!-- 폼그룹 -->
                     <div class="serach">
                         <div class="serach_tit">
-                            <label for="label">메인검색창</label>
+                            <label for="searchinput">메인검색창</label>
                         </div>
                         <div class="serach_content">
                             <div class="sejong">
                                 <a href="#n"><img src="images/search/search_sejong.jpg" alt="세종캐릭터"></a>
                             </div>
                             <div class="search_inner">
-                                <input class="search_bar" placeholder="세종의 모든것을 검색해보세요">
+                                <input class="searchinput" type="text" placeholder="세종의 모든것을 검색해보세요">
                                 <button title="새창으로 이동" class="search_button"><span>검색</span></button>
                             </div>
                         </div>
@@ -828,16 +828,16 @@
                             <!-- tab list -->
                             <div class="tab_head">
                                 <ul class="tab_list">
-                                    <li role="tab" id="tab_01" aria-selected="true" aria-controls="tabpanel_01" class="active" title="선택됨">
+                                    <li role=tablist id="tab_01" aria-selected="true" aria-controls="tabpanel_01" class="active">
                                         <a href="#n">공지사항</a>
                                     </li>
-                                    <li role="tab" id="tab_02" aria-selected="false" aria-controls="tabpanel_02">
+                                    <li role=tablist id="tab_02" aria-selected="false" aria-controls="tabpanel_02">
                                         <a href="#n">고시공고</a>
                                     </li>
-                                    <li role="tab" id="tab_03" aria-selected="false" aria-controls="tabpanel_03">
+                                    <li role=tablist id="tab_03" aria-selected="false" aria-controls="tabpanel_03">
                                         <a href="#n">시험정보</a>
                                     </li>
-                                    <li role="tab" id="tab_04" aria-selected="false" aria-controls="tabpanel_04">
+                                    <li role=tablist id="tab_04" aria-selected="false" aria-controls="tabpanel_04">
                                         <a href="#n">보도자료</a>
                                     </li>
                                     <li class="more"><a href="#n"><span>전체보기</span></a></li>
@@ -1051,6 +1051,7 @@
                     </div>
                 </div>
             </div>
+        </div>
         <footer>
             <div class="footer_head">
                 <div class="wrapper">
