--- a/Sejong/index.html
+++ b/Sejong/index.html
@@ -637,7 +637,7 @@
                     <!-- 폼그룹 -->
                     <div class="serach">
                         <div class="serach_tit">
-                            <label for="searchinput">메인검색창</label>
+                            <label>메인검색창</label>
                         </div>
                         <div class="serach_content">
                             <div class="sejong">
@@ -827,17 +827,17 @@
                         <div class="news_layer">
                             <!-- tab list -->
                             <div class="tab_head">
-                                <ul class="tab_list">
-                                    <li role=tablist id="tab_01" aria-selected="true" aria-controls="tabpanel_01" class="active">
+                                <ul class="tab_list" role="tablist">
+                                    <li role=tab aria-selected="true" aria-controls="tabpanel_01" class="active">
                                         <a href="#n">공지사항</a>
                                     </li>
-                                    <li role=tablist id="tab_02" aria-selected="false" aria-controls="tabpanel_02">
+                                    <li role=tab aria-selected="false" aria-controls="tabpanel_02">
                                         <a href="#n">고시공고</a>
                                     </li>
-                                    <li role=tablist id="tab_03" aria-selected="false" aria-controls="tabpanel_03">
+                                    <li role=tab aria-selected="false" aria-controls="tabpanel_03">
                                         <a href="#n">시험정보</a>
                                     </li>
-                                    <li role=tablist id="tab_04" aria-selected="false" aria-controls="tabpanel_04">
+                                    <li role=tab aria-selected="false" aria-controls="tabpanel_04">
                                         <a href="#n">보도자료</a>
                                     </li>
                                     <li class="more"><a href="#n"><span>전체보기</span></a></li>
