--- a/Sejong/index.html
+++ b/Sejong/index.html
@@ -840,8 +840,8 @@
                                     <li role=tab id="tab_04" aria-selected="false" aria-controls="tabpanel_04">
                                         <a href="#n">보도자료</a>
                                     </li>
-                                    <li class="more"><a href="#n"><span>전체보기</span></a></li>
                                 </ul>
+                                <div class="more"><a href="#n"><span>전체보기</span></a></div>
                             </div>
                             <!-- //tab list -->                          
                             <!-- tab contents -->
