250226-제이쿼리 로직 다시수정
현재문제 클릭해서 다른거를 눌러도 그대로 떠있음

--- a/Sejong/index.html
+++ b/Sejong/index.html
@@ -841,7 +841,6 @@
                                         <a href="#n">보도자료</a>
                                     </li>
                                 </ul>
-                                <div class="more"><a href="#n"><span>전체보기</span></a></div>
                             </div>
                             <!-- //tab list -->                          
                             <!-- tab contents -->
@@ -879,6 +878,7 @@
                                             </a>
                                         </li>
                                     </ul>
+                                    <div class="more"><a href="#n"><span>더보기</span></a></div>
                                 </div>
                                 <div role="tabpanel" id="tabpanel_02" aria-labelledby="tab_02" aria-hidden="true">
                                     <ul>
@@ -913,6 +913,7 @@
                                             </a>
                                         </li>
                                     </ul>
+                                    <div class="more"><a href="#n"><span>더보기</span></a></div>
                                 </div>
                                 <div role="tabpanel" id="tabpanel_03" aria-labelledby="tab_03" aria-hidden="true">
                                     <ul>
@@ -947,8 +948,9 @@
                                             </a>
                                         </li>
                                     </ul>
+                                    <div class="more"><a href="#n"><span>더보기</span></a></div>
                                 </div>
-                                <div role="tabpanel" id="tabpanel_04" aria-labelledby="tab_04" aria-hidden="true">
+                                <div role="tabpanel" id="tabpanel_04" aria-labelledby="tab_04" aria-hidden="true">                                    
                                     <ul>
                                         <li>
                                             <a href="#n">
@@ -981,6 +983,7 @@
                                             </a>
                                         </li>
                                     </ul>
+                                    <div class="more"><a href="#n"><span>더보기</span></a></div>
                                 </div>
                             </div>
                         </div>
